[package]
name = "kkb"
version = "0.1.0"
edition = "2021"
author = ["Devin Leamy devinleamy@gmail.com"]
description = "Generate beautiful custom desktop images with DALL-E 3"
readme = "README.md"
keywords = ["images", "dall-e", "wallpaper"]
categories = ["command-line-utilities"]
repository = "https://github.com/DevinLeamy/kkb"

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.7", features = ["derive"] }
directories-next = "2.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
ureq = { version = "2.8.0", features = ["json"] }
uuid = { version = "1.5.0", features = ["v4"] }
wallpaper = "3.2.0"
